# minesweeper-qt

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp  minesweeper.pro
res/: res.qrc
src/: cell.cpp  cell.h  field.cpp  field.h  lcdmines.cpp  lcdmines.h  lcdtimer.cpp  lcdtimer.h  main.cpp  mainwindow.cpp  mainwindow.h
